apps/vicegerent/graphiti/falkordb-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falkordb
  namespace: graphiti
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falkordb
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: graphiti
            app.kubernetes.io/name: graphiti-mcp
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP
